--- a/class-6.css
+++ b/class-6.css
@@ -1,4 +1,35 @@
-/* class selactor */
+/* universal selector */
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box; 
+}
+/* type/element/tag selector */
+strong {
+    font-size: 20px;
+}
+/* type/element/tag selector */
+p{
+    color: #000;
+    background-color: rgba(234, 87, 35, 0.5);
+    /* Absolute */
+    width: 20px;
+    /* Relative Units */
+    width: 75vw;
+    /* the numbered values with no units */
+    margin: 0;
+    line-height: 1.2;
+}
+/* type/element/tag selector */
+div{
+    /* function values */
+    transform: rotate(0deg);
+    width: calc(100% - 20px);
+    height: 100vh;
+    background-image: url("https://valcomm.co.uk/wp-content/uploads/2018/02/background.png");
+    background-size: cover;
+}
+/* class selector */
 .heading {
  background-color: #000;
 }
